# jubilant-sniffle

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
configs/models/: afriteva_v2_large_ayaft.yaml  aya_101.yaml  bigscience_bloomz.yaml  bigscience_bloomz_1b7.yaml  bigscience_bloomz_3b.yaml  bigscience_bloomz_7b1.yaml  bigscience_mt0_base.yaml  bigscience_mt0_large.yaml  bigscience_mt0_small.yaml  bigscience_mt0_xl.yaml  bigscience_mt0_xxl.yaml  google_flan_t5_base.yaml  google_flan_t5_large.yaml  google_flan_t5_small.yaml  google_gemma-1_7b_it.yaml  google_gemma-1_7b_it_vllm.yaml  google_gemma-2_27b_it.yaml  google_gemma-2_27b_it_vllm.yaml  google_gemma-2_9b_it.yaml  google_gemma-2_9b_it_vllm.yaml  jacaranda_afrollama.yaml  jacaranda_afrollama_vllm.yaml  lelapa_inkuba_0_4b.yaml  llamax3-8B-Alpaca.yaml  llamax3-8b-alpaca.yaml  llamax_8b.yaml  lugh_llama.yaml  lugh_llama_math.yaml  meta_llama-2_7b_chat.yaml  meta_llama-2_7b_chat_vllm.yaml  meta_llama-3.1_70b_instruct.yaml  meta_llama-3.1_70b_instruct_vllm.yaml  meta_llama-3.1_8b_instruct.yaml  meta_llama-3.1_8b_instruct_vllm.yaml  meta_llama_3_1_8b_instruct.yaml  meta_llama_3_2_1b_instruct.yaml  (+4 more)
notebooks/: explore.ipynb  upload_to_bucket.ipynb
scripts/: generate_afrimgsm_benchmark.sh  generate_afrimmlu_benchmark.sh  generate_afriqa_benchmark.sh  generate_afrisenti_benchmark.sh  generate_afrixnli_benchmark.sh  generate_belebele_benchmark.sh  generate_mafand_benchmark.sh  generate_masakhanews_benchmark.sh  generate_naijarc_benchmark.sh  generate_nollysenti_benchmark.sh  generate_openai_mmlu_benchmark.sh  generate_sib_benchmark.sh  generate_sib_contd_benchmark.sh
src/: args.py  compute_api_metrics-summ.py  compute_api_metrics.py  dataclasses.py  evaluate.py  evaluate_api.py  evaluate_lm_eval.py  evaluate_translation_api.py  get_average_metrics.py  get_summarizer_metrics.py  processing_queue.py  run_summarization_api.py  together_client.py  utils.py
(+58 files in other folders)
