[tool.poetry]
name = "afrilm-leaderboard"
version = "0.1.0"
description = ""
authors = ["Ogundepo Odunayo <ogundepoodunayo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dataclasses-json = "^0.6.7"
nvitop = "^1.3.2"
lm-eval = { path = "lm-evaluation-harness", develop = true }
wandb = "^0.18.2"
pycountry = "^24.6.1"
azure-storage-blob = "^12.23.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
